<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:background="@color/cardview_dark_background"
    android:clickable="true"
    android:tag="sidebarFragment">

    <Switch
        android:id="@+id/allowEditingSwitch"
        android:layout_width="215dp"
        android:layout_height="60dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="152dp"
        android:background="@color/cardview_dark_background"
        android:rotationX="0"
        android:text="@string/allowEditingText"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="75dp"
        android:layout_height="35dp"
        android:layout_marginTop="44dp"
        android:fontFamily="sans-serif"
        android:gravity="center_vertical"
        android:text="@string/fontSize"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="@+id/allowEditingSwitch"
        app:layout_constraintTop_toBottomOf="@+id/allowEditingSwitch" />

    <EditText
        android:id="@+id/fontSizeInput"
        android:layout_width="120dp"
        android:layout_height="55dp"
        android:ems="10"
        android:inputType="number"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="@+id/textView3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.6"
        app:layout_constraintStart_toEndOf="@+id/textView3"
        app:layout_constraintTop_toTopOf="@+id/textView3"
        app:layout_constraintVertical_bias="0.8" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:gravity="center_vertical"
        android:text="@string/textColor"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="@+id/textView3"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <Spinner
        android:id="@+id/textColorSpinner"
        android:layout_width="120dp"
        android:layout_height="55dp"
        app:layout_constraintBottom_toBottomOf="@+id/textView4"
        app:layout_constraintEnd_toEndOf="@+id/fontSizeInput"
        app:layout_constraintStart_toStartOf="@+id/fontSizeInput"
        app:layout_constraintTop_toTopOf="@+id/textView4"
        app:layout_constraintVertical_bias="0.677" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="75dp"
        android:layout_height="35dp"
        android:layout_marginTop="28dp"
        android:text="@string/fontFamily"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="@+id/textView4"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/textView4"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <Spinner
        android:id="@+id/fontFamilySpinner"
        android:layout_width="120dp"
        android:layout_height="55dp"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="@+id/textView5"
        app:layout_constraintEnd_toEndOf="@+id/textColorSpinner"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/textColorSpinner"
        app:layout_constraintTop_toTopOf="@+id/textView5"
        app:layout_constraintVertical_bias="0.466" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="84dp"
        android:layout_height="20dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="36dp"
        android:text="@string/style"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <Spinner
        android:id="@+id/textStyleSpinner"
        android:layout_width="120dp"
        android:layout_height="55dp"
        app:layout_constraintBottom_toBottomOf="@+id/textView"
        app:layout_constraintEnd_toEndOf="@+id/fontFamilySpinner"
        app:layout_constraintStart_toStartOf="@+id/fontFamilySpinner"
        app:layout_constraintTop_toTopOf="@+id/textView"
        app:layout_constraintVertical_bias="0.454" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="60dp"
        android:text="@string/displayText"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <EditText
        android:id="@+id/displayTextInput"
        android:layout_width="120dp"
        android:layout_height="55dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/displayText"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="@+id/textView2"
        app:layout_constraintEnd_toEndOf="@+id/textStyleSpinner"
        app:layout_constraintStart_toStartOf="@+id/textStyleSpinner"
        app:layout_constraintTop_toTopOf="@+id/textView2" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="65dp"
        android:layout_height="22dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="68dp"
        android:text="@string/language"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <Spinner
        android:id="@+id/languageSpinner"
        android:layout_width="120dp"
        android:layout_height="55dp"
        app:layout_constraintBottom_toBottomOf="@+id/textView6"
        app:layout_constraintEnd_toEndOf="@+id/displayTextInput"
        app:layout_constraintStart_toStartOf="@+id/displayTextInput"
        app:layout_constraintTop_toTopOf="@+id/textView6" />

    <ImageButton
        android:id="@+id/closeMenuButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="68dp"
        android:onClick="closeMenuButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@android:drawable/ic_menu_close_clear_cancel" />

</androidx.constraintlayout.widget.ConstraintLayout>